--- a/speedometer3.html
+++ b/speedometer3.html
@@ -15,6 +15,7 @@
         <p id="girmaler"></p>
       </section>
       <section id="fartsmaler">
+        0 KM/t
       </section>
       <section class="circle">
         <div class="innercircle"></div>
@@ -65,7 +66,7 @@
     }
 
     function displaySpeed(){
-      fartsmaler.innerHTML = currentSpeed + "Km/t"
+      fartsmaler.innerHTML = currentSpeed + "KM/t"
     }
 
 
